--- a/core/tools/pkg/debian/po/fr.po
+++ b/core/tools/pkg/debian/po/fr.po
@@ -1,13 +1,13 @@
-# Translation of twiki debconf templates to French
+# Translation of foswiki debconf templates to French
 # Copyright (C) 2008 French Debian l10n team <debian-l10n-french@lists.debian.org>
-# This file is distributed under the same license as the twiki package.
+# This file is distributed under the same license as the foswiki package.
 #
 # Christian Perrier <bubulle@debian.org>, 2008.
 # Michel Grentzinger <mic.grentz@online.fr>, 2006-2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: twiki@packages.debian.org\n"
+"Report-Msgid-Bugs-To: foswiki@packages.debian.org\n"
 "POT-Creation-Date: 2008-07-16 11:58+0200\n"
 "PO-Revision-Date: 2008-06-28 14:34+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
@@ -20,26 +20,26 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../templates:1001
-msgid "URL of the server TWiki runs under:"
-msgstr "URL du serveur où est utilisé TWiki :"
+msgid "URL of the server Foswiki runs under:"
+msgstr "URL du serveur où est utilisé Foswiki :"
 
 #. Type: string
 #. Description
 #: ../templates:1001
 msgid ""
 "Please enter the web server URL (such as \"http://www.example.org/\"). "
-"Complete TWiki URLs will be constructed from this value plus the string "
-"\"twiki/\"."
+"Complete Foswiki URLs will be constructed from this value plus the string "
+"\"foswiki/\"."
 msgstr ""
 "Veuillez indiquer l'URL du serveur web (p.Â ex. http://www.example.org). Les "
-"URL de TWiki seront construites avec cette URL où sera ajoutée la chaîne "
-"« twiki/ »."
+"URL de Foswiki seront construites avec cette URL où sera ajoutée la chaîne "
+"« foswiki/ »."
 
 #. Type: string
 #. Description
 #: ../templates:2001
-msgid "Email address of the webmaster for this TWiki:"
-msgstr "Adresse électronique du webmestre de TWiki :"
+msgid "Email address of the webmaster for this Foswiki:"
+msgstr "Adresse électronique du webmestre de Foswiki :"
 
 #. Type: string
 #. Description
@@ -62,21 +62,21 @@ msgstr "Faut-il installer un environnement wiki par défaut ?"
 #. Description
 #: ../templates:3001
 msgid ""
-"TWiki includes a complete \"starter kit\" which includes user registration "
+"Foswiki includes a complete \"starter kit\" which includes user registration "
 "pages, documentation, and tutorials."
 msgstr ""
-"TWiki fournit un « kit de démarrage» complet qui comprend les pages "
+"Foswiki fournit un « kit de démarrage» complet qui comprend les pages "
 "d'enregistrement, la documentation et des tutoriels."
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
 msgid ""
-"Accept this option unless you want to use an existing TWiki data set (for "
+"Accept this option unless you want to use an existing Foswiki data set (for "
 "instance, one left over from a previous installation)."
 msgstr ""
 "Il est conseillé de choisir cette option sauf si vous souhaitez réutiliser "
-"un jeu de donnée TWiki existant, par exemple celui laissé par une "
+"un jeu de donnée Foswiki existant, par exemple celui laissé par une "
 "installation antérieure."
 
 #. Type: boolean
@@ -84,13 +84,13 @@ msgstr ""
 #: ../templates:3001
 msgid ""
 "If data/Main/WebHome.txt is present, the starter kit will not be unpacked. "
-"The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-"(and twiki-pub.tar.gz) if you want to install it manually or compare the "
+"The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+"(and foswiki-pub.tar.gz) if you want to install it manually or compare the "
 "topics with the new version."
 msgstr ""
 "Si le fichier data/Main/WebHome.txt est présent, le kit de démarrage ne sera "
 "pas décompressé. Les fichiers du kit de démarrage peuvent être trouvés dans /"
-"usr/share/twiki/twiki-data.tar.gz (et twiki-pub.tar.gz) si vous voulez "
+"usr/share/foswiki/foswiki-data.tar.gz (et foswiki-pub.tar.gz) si vous voulez "
 "l'installer vous-même ou le comparer à la nouvelle version."
 
 #. Type: note
@@ -121,11 +121,11 @@ msgstr "Utilisateur Apache autorisé à accéder au script de configuration :"
 #: ../templates:5001
 msgid ""
 "Please enter the username of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Veuillez indiquer l'identifiant de l'utilisateur Apache qui sera autorisé à "
 "exécuter le script de configuration à l'adresse http://localhost/cgi-bin/"
-"twiki/configure."
+"foswiki/configure."
 
 #. Type: password
 #. Description
@@ -139,11 +139,11 @@ msgstr "Mot de passe de ${configuser} :"
 #: ../templates:6001
 msgid ""
 "Please enter the password of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Veuillez choisir le mot de passe de l'identifiant qui sera autorisé à "
 "exécuter le script de configuration à l'adresse http://localhost/cgi-bin/"
-"twiki/configure."
+"foswiki/configure."
 
 #. Type: password
 #. Description
@@ -172,18 +172,18 @@ msgstr ""
 "Les mots de passe que vous avez indiqués ne sont pas identiques. Vous allez "
 "devoir les resaisir."
 
-#~ msgid "Top-level URL of the server TWiki runs under:"
-#~ msgstr "URL du serveur faisant tourner TWiki :"
+#~ msgid "Top-level URL of the server Foswiki runs under:"
+#~ msgstr "URL du serveur faisant tourner Foswiki :"
 
 #~ msgid ""
 #~ "For a normal install, this should be a URL for your web server's full "
 #~ "name, which is used to construct URLs on some pages.  The install will "
-#~ "serve up the data by adding \"twiki\" to the end of this setting; it is "
+#~ "serve up the data by adding \"foswiki\" to the end of this setting; it is "
 #~ "also needed for certain redirections."
 #~ msgstr ""
 #~ "Pour une installation normale, vous devriez indiquer l'URL construite à "
 #~ "partir du nom complet de votre serveur. Les données seront accessibles à "
-#~ "l'adresse indiquée en ajoutant twiki à cette valeur. Celle-ci servira "
+#~ "l'adresse indiquée en ajoutant foswiki à cette valeur. Celle-ci servira "
 #~ "également pour certaines redirections."
 
 #~ msgid ""
@@ -200,22 +200,22 @@ msgstr ""
 #~ "initiale ?"
 
 #~ msgid ""
-#~ "TWiki includes a complete \"starter kit\" which includes user "
+#~ "Foswiki includes a complete \"starter kit\" which includes user "
 #~ "registration pages, documentation, and tutorials.  Only decline if you're "
-#~ "re-installing TWiki after deleting the package and want to keep the old "
-#~ "data, or if you've got a TWiki data set from your own manual install.  If "
+#~ "re-installing Foswiki after deleting the package and want to keep the old "
+#~ "data, or if you've got a Foswiki data set from your own manual install.  If "
 #~ "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#~ "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#~ "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#~ "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#~ "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #~ "your topics with the new version."
 #~ msgstr ""
-#~ "TWiki comprend un kit de démarrage complet qui inclut des pages destinées "
+#~ "Foswiki comprend un kit de démarrage complet qui inclut des pages destinées "
 #~ "à l'enregistrement des utilisateurs, de la documentation et des "
 #~ "tutoriels. Veuillez refuser uniquement dans le cas où vous réinstallez "
-#~ "twiki après avoir supprimé le paquet et que vous souhaitez conserver vos "
-#~ "anciennes données ou si vous avez un ensemble de données twiki provenant "
+#~ "foswiki après avoir supprimé le paquet et que vous souhaitez conserver vos "
+#~ "anciennes données ou si vous avez un ensemble de données foswiki provenant "
 #~ "d'une installation que vous avez faite vous-même. Si le fichier data/Main/"
 #~ "WebHome.txt est présent, le kit de démarrage ne sera pas décompressé. Les "
-#~ "fichiers du kit de démarrage peuvent être trouvés dans /usr/share/twiki/"
-#~ "twiki-data.tar.gz (et twiki-pub.tar.gz) si vous voulez l'installer vous-"
+#~ "fichiers du kit de démarrage peuvent être trouvés dans /usr/share/foswiki/"
+#~ "foswiki-data.tar.gz (et foswiki-pub.tar.gz) si vous voulez l'installer vous-"
 #~ "même ou le comparer à la nouvelle version."
