--- a/core/tools/pkg/debian/po/gl.po
+++ b/core/tools/pkg/debian/po/gl.po
@@ -1,11 +1,11 @@
-# Galician translation of twiki's debconf templates
-# This file is distributed under the same license as the twiki package.
+# Galician translation of foswiki's debconf templates
+# This file is distributed under the same license as the foswiki package.
 # Jacobo Tarrio <jtarrio@debian.org>, 2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: twiki\n"
-"Report-Msgid-Bugs-To: twiki@packages.debian.org\n"
+"Project-Id-Version: foswiki\n"
+"Report-Msgid-Bugs-To: foswiki@packages.debian.org\n"
 "POT-Creation-Date: 2008-07-16 11:58+0200\n"
 "PO-Revision-Date: 2008-06-28 14:16+0100\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
@@ -17,26 +17,26 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../templates:1001
-msgid "URL of the server TWiki runs under:"
-msgstr "URL do servidor no que se executa TWiki:"
+msgid "URL of the server Foswiki runs under:"
+msgstr "URL do servidor no que se executa Foswiki:"
 
 #. Type: string
 #. Description
 #: ../templates:1001
 msgid ""
 "Please enter the web server URL (such as \"http://www.example.org/\"). "
-"Complete TWiki URLs will be constructed from this value plus the string "
-"\"twiki/\"."
+"Complete Foswiki URLs will be constructed from this value plus the string "
+"\"foswiki/\"."
 msgstr ""
 "Introduza o URL do servidor web (por exemplo, \"http://www.example.org/\"). "
-"Hanse construir os URLs completos de TWiki a partir deste valor, engadindo a "
-"cadea \"twiki/\"."
+"Hanse construir os URLs completos de Foswiki a partir deste valor, engadindo a "
+"cadea \"foswiki/\"."
 
 #. Type: string
 #. Description
 #: ../templates:2001
-msgid "Email address of the webmaster for this TWiki:"
-msgstr "Enderezo de email do webmaster deste TWiki:"
+msgid "Email address of the webmaster for this Foswiki:"
+msgstr "Enderezo de email do webmaster deste Foswiki:"
 
 #. Type: string
 #. Description
@@ -59,20 +59,20 @@ msgstr "¿Instalar o conxunto de temas por defecto?"
 #. Description
 #: ../templates:3001
 msgid ""
-"TWiki includes a complete \"starter kit\" which includes user registration "
+"Foswiki includes a complete \"starter kit\" which includes user registration "
 "pages, documentation, and tutorials."
 msgstr ""
-"TWiki inclúe un \"kit de iniciación\" que inclúe as páxinas de rexistro de "
+"Foswiki inclúe un \"kit de iniciación\" que inclúe as páxinas de rexistro de "
 "usuarios, documentación e tutoriais."
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
 msgid ""
-"Accept this option unless you want to use an existing TWiki data set (for "
+"Accept this option unless you want to use an existing Foswiki data set (for "
 "instance, one left over from a previous installation)."
 msgstr ""
-"Acepte esta opción a menos que queira empregar un xogo de datos de TWiki "
+"Acepte esta opción a menos que queira empregar un xogo de datos de Foswiki "
 "existente (por exemplo, un procedente dunha instalación anterior)."
 
 #. Type: boolean
@@ -80,13 +80,13 @@ msgstr ""
 #: ../templates:3001
 msgid ""
 "If data/Main/WebHome.txt is present, the starter kit will not be unpacked. "
-"The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-"(and twiki-pub.tar.gz) if you want to install it manually or compare the "
+"The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+"(and foswiki-pub.tar.gz) if you want to install it manually or compare the "
 "topics with the new version."
 msgstr ""
 "Se existe o ficheiro data/Main/WebHome.txt, non se ha desempaquetar o kit de "
-"iniciación. Os ficheiros do kit de iniciación están en /usr/share/twiki/"
-"twiki-data.tar.gz (e twiki-pub.tar.gz), por se os quere instalar manualmente "
+"iniciación. Os ficheiros do kit de iniciación están en /usr/share/foswiki/"
+"foswiki-data.tar.gz (e foswiki-pub.tar.gz), por se os quere instalar manualmente "
 "ou comparar os temas coa nova versión."
 
 #. Type: note
@@ -117,10 +117,10 @@ msgstr "Usuario de Apache ao que se permite o acceso ao script \"configure\":"
 #: ../templates:5001
 msgid ""
 "Please enter the username of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Introduza o nome do usuario de Apache ao que se ha permitir executar o "
-"script \"configure\" de http://localhost/cgi-bin/twiki/configure."
+"script \"configure\" de http://localhost/cgi-bin/foswiki/configure."
 
 #. Type: password
 #. Description
@@ -134,10 +134,10 @@ msgstr "Contrasinal para \"${configuser}\":"
 #: ../templates:6001
 msgid ""
 "Please enter the password of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Introduza o contrasinal do usuario de Apache ao que se ha permitir executar "
-"o script \"configure\" de http://localhost/cgi-bin/twiki/configure."
+"o script \"configure\" de http://localhost/cgi-bin/foswiki/configure."
 
 #. Type: password
 #. Description
@@ -166,18 +166,18 @@ msgstr ""
 "Os contrasinais que introduciu non son iguais. Ha ter que volvelos "
 "introducir."
 
-#~ msgid "Top-level URL of the server TWiki runs under:"
-#~ msgstr "URL de nivel superior do servidor no que se executa TWiki:"
+#~ msgid "Top-level URL of the server Foswiki runs under:"
+#~ msgstr "URL de nivel superior do servidor no que se executa Foswiki:"
 
 #~ msgid ""
 #~ "For a normal install, this should be a URL for your web server's full "
 #~ "name, which is used to construct URLs on some pages.  The install will "
-#~ "serve up the data by adding \"twiki\" to the end of this setting; it is "
+#~ "serve up the data by adding \"foswiki\" to the end of this setting; it is "
 #~ "also needed for certain redirections."
 #~ msgstr ""
 #~ "Nunha instalación normal isto debería ser un URL co nome completo do seu "
 #~ "servidor web, que se emprega para construír URLs nalgunhas páxinas. A "
-#~ "instalación ha servir os datos engadindo \"twiki\" ao final deste valor; "
+#~ "instalación ha servir os datos engadindo \"foswiki\" ao final deste valor; "
 #~ "tamén se precisa para algunhas redireccións."
 
 #~ msgid ""
@@ -191,20 +191,20 @@ msgstr ""
 #~ msgstr "¿Instalar o conxunto de temas por defecto na instalación inicial?"
 
 #~ msgid ""
-#~ "TWiki includes a complete \"starter kit\" which includes user "
+#~ "Foswiki includes a complete \"starter kit\" which includes user "
 #~ "registration pages, documentation, and tutorials.  Only decline if you're "
-#~ "re-installing TWiki after deleting the package and want to keep the old "
-#~ "data, or if you've got a TWiki data set from your own manual install.  If "
+#~ "re-installing Foswiki after deleting the package and want to keep the old "
+#~ "data, or if you've got a Foswiki data set from your own manual install.  If "
 #~ "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#~ "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#~ "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#~ "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#~ "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #~ "your topics with the new version."
 #~ msgstr ""
-#~ "TWiki inclúe un \"kit de iniciación\" que inclúe as páxinas de rexistro "
+#~ "Foswiki inclúe un \"kit de iniciación\" que inclúe as páxinas de rexistro "
 #~ "de usuarios, documentación e tutoriais. Rexeite isto só se está a "
-#~ "reinstalar TWiki despois de borrar o paquete e quere conservar os datos "
+#~ "reinstalar Foswiki despois de borrar o paquete e quere conservar os datos "
 #~ "antigos ou se xa ten un xogo de datos da súa propia instalación manual. "
 #~ "Se existe o ficheiro data/Main/WebHome.txt, non se ha desempaquetar o kit "
 #~ "de iniciación. Os ficheiros do kit de iniciación están en /usr/share/"
-#~ "twiki/twiki-data.tar.gz (e twiki-pub.tar.gz), por se os quere instalar "
+#~ "foswiki/foswiki-data.tar.gz (e foswiki-pub.tar.gz), por se os quere instalar "
 #~ "manualmente ou comparar os temas coa nova versión."
