--- a/core/tools/pkg/debian/po/pt.po
+++ b/core/tools/pkg/debian/po/pt.po
@@ -1,12 +1,12 @@
-# Portuguese translation for twiki's debconf messages
+# Portuguese translation for foswiki's debconf messages
 # Copyright (C) 2007 Miguel Figueiredo <elmig@debianpt.org>
-# This file is distributed under the same license as the twiki package.
+# This file is distributed under the same license as the foswiki package.
 # Miguel Figueiredo <elmig@debianpt.org>, 2007-2008.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: twiki\n"
-"Report-Msgid-Bugs-To: twiki@packages.debian.org\n"
+"Project-Id-Version: foswiki\n"
+"Report-Msgid-Bugs-To: foswiki@packages.debian.org\n"
 "POT-Creation-Date: 2008-07-16 11:58+0200\n"
 "PO-Revision-Date: 2008-07-01 23:22+0100\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
@@ -18,26 +18,26 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../templates:1001
-msgid "URL of the server TWiki runs under:"
-msgstr "O URL do servidor onde corre o TWiki:"
+msgid "URL of the server Foswiki runs under:"
+msgstr "O URL do servidor onde corre o Foswiki:"
 
 #. Type: string
 #. Description
 #: ../templates:1001
 msgid ""
 "Please enter the web server URL (such as \"http://www.example.org/\"). "
-"Complete TWiki URLs will be constructed from this value plus the string "
-"\"twiki/\"."
+"Complete Foswiki URLs will be constructed from this value plus the string "
+"\"foswiki/\"."
 msgstr ""
 "Por favor introduza o URL do servidor web (tal como \"http://www.exemplo.org/"
-"\"). Os URLs completos do TWiki podem ser construidos a partir deste valor "
-"adicionando a string \"twiki/\"."
+"\"). Os URLs completos do Foswiki podem ser construidos a partir deste valor "
+"adicionando a string \"foswiki/\"."
 
 #. Type: string
 #. Description
 #: ../templates:2001
-msgid "Email address of the webmaster for this TWiki:"
-msgstr "Endereço de email do webmaster para este TWiki:"
+msgid "Email address of the webmaster for this Foswiki:"
+msgstr "Endereço de email do webmaster para este Foswiki:"
 
 #. Type: string
 #. Description
@@ -60,20 +60,20 @@ msgstr "Instalar o 'Topic Set' pré-definido do wiki?"
 #. Description
 #: ../templates:3001
 msgid ""
-"TWiki includes a complete \"starter kit\" which includes user registration "
+"Foswiki includes a complete \"starter kit\" which includes user registration "
 "pages, documentation, and tutorials."
 msgstr ""
-"O TWiki inclui um \"kit de iniciação\" completo que inclui páginas de "
+"O Foswiki inclui um \"kit de iniciação\" completo que inclui páginas de "
 "registo de utilizadores, documentação e tutoriais."
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
 msgid ""
-"Accept this option unless you want to use an existing TWiki data set (for "
+"Accept this option unless you want to use an existing Foswiki data set (for "
 "instance, one left over from a previous installation)."
 msgstr ""
-"Aceite esta opção a menos que queira utilizar um conjunto de dados do TWiki "
+"Aceite esta opção a menos que queira utilizar um conjunto de dados do Foswiki "
 "já existentes (por exemplo, um conjunto deixado de uma instalação anterior)."
 
 #. Type: boolean
@@ -81,14 +81,14 @@ msgstr ""
 #: ../templates:3001
 msgid ""
 "If data/Main/WebHome.txt is present, the starter kit will not be unpacked. "
-"The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-"(and twiki-pub.tar.gz) if you want to install it manually or compare the "
+"The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+"(and foswiki-pub.tar.gz) if you want to install it manually or compare the "
 "topics with the new version."
 msgstr ""
 "Se data/Main/WebHome.txt estiver presente, o kit de iniciação não será "
 "desempacotado. Se quiser instala-lo manualmente ou comparar os tópicos com a "
-"nova versão o kit de iniciação poderá ser encontrado em /usr/share/doc/twiki/"
-"twiki-data.tar.gz (e twiki-pub.tar.gz)"
+"nova versão o kit de iniciação poderá ser encontrado em /usr/share/doc/foswiki/"
+"foswiki-data.tar.gz (e foswiki-pub.tar.gz)"
 
 #. Type: note
 #. Description
@@ -118,10 +118,10 @@ msgstr "Utilizador do Apache ao qual é permitido aceder ao script 'configure':"
 #: ../templates:5001
 msgid ""
 "Please enter the username of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Por favor introduza o nome de utilizador do utilizador do apache ao qual "
-"será permitido correr o script configure em http://localhost/cgi-bin/twiki/"
+"será permitido correr o script configure em http://localhost/cgi-bin/foswiki/"
 "configure."
 
 #. Type: password
@@ -136,10 +136,10 @@ msgstr "Palavra-passe para '${configuser}':"
 #: ../templates:6001
 msgid ""
 "Please enter the password of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Por favor introduza a palavra-passe do utilizador de apache ao qual será "
-"permitido correr o script configure em http://localhost/cgi-bin/twiki/"
+"permitido correr o script configure em http://localhost/cgi-bin/foswiki/"
 "configure."
 
 #. Type: password
@@ -169,18 +169,18 @@ msgstr ""
 "As palavras-chave que introduziu não coincidem. Terá de as introduzir "
 "novamente."
 
-#~ msgid "Top-level URL of the server TWiki runs under:"
-#~ msgstr "O URL de nível mais alto onde corre o servidor TWiki:"
+#~ msgid "Top-level URL of the server Foswiki runs under:"
+#~ msgstr "O URL de nível mais alto onde corre o servidor Foswiki:"
 
 #~ msgid ""
 #~ "For a normal install, this should be a URL for your web server's full "
 #~ "name, which is used to construct URLs on some pages.  The install will "
-#~ "serve up the data by adding \"twiki\" to the end of this setting; it is "
+#~ "serve up the data by adding \"foswiki\" to the end of this setting; it is "
 #~ "also needed for certain redirections."
 #~ msgstr ""
 #~ "Para uma instalação normal, isto deve ser o URL do nome completo do seu "
 #~ "servidor web, o qual é utilizado para construir urls em algumas páginas.  "
-#~ "A instalação irá servir os dados acrescentando \"twiki\" ao fim desta "
+#~ "A instalação irá servir os dados acrescentando \"foswiki\" ao fim desta "
 #~ "secção; também é necessário para alguns redireccionamentos."
 
 #~ msgid ""
@@ -194,21 +194,21 @@ msgstr ""
 #~ msgstr "Instalar o Topic Set do wiki por omissão na instalação inicial?"
 
 #~ msgid ""
-#~ "TWiki includes a complete \"starter kit\" which includes user "
+#~ "Foswiki includes a complete \"starter kit\" which includes user "
 #~ "registration pages, documentation, and tutorials.  Only decline if you're "
-#~ "re-installing TWiki after deleting the package and want to keep the old "
-#~ "data, or if you've got a TWiki data set from your own manual install.  If "
+#~ "re-installing Foswiki after deleting the package and want to keep the old "
+#~ "data, or if you've got a Foswiki data set from your own manual install.  If "
 #~ "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#~ "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#~ "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#~ "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#~ "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #~ "your topics with the new version."
 #~ msgstr ""
 #~ "O Twiki inclui um \"kit de iniciação\" completo que inclui páginas de "
 #~ "registo de utilizadores, documentação, e tutoriais.  Apenas rejeite se "
-#~ "está a reinstalar o twiki após ter apagado o pacote e desejar manter os "
-#~ "dados antigos, ou se tem um conjunto de dados do twiki da sua instalação "
+#~ "está a reinstalar o foswiki após ter apagado o pacote e desejar manter os "
+#~ "dados antigos, ou se tem um conjunto de dados do foswiki da sua instalação "
 #~ "manual. Se estiver presente data/main/WebHome.txt, o lit de iniciação não "
 #~ "será desempacotado. Os ficheiros do kit de iniciação podem ser "
-#~ "encontrados em /usr/share/doc/twiki/twiki-data.tar.gz (e twiki-pub.tar."
+#~ "encontrados em /usr/share/doc/foswiki/foswiki-data.tar.gz (e foswiki-pub.tar."
 #~ "gz) se desejar instalar manualmente ou comparar os seus tópicos com a "
 #~ "nova versão."
