--- a/core/tools/pkg/debian/po/pt_BR.po
+++ b/core/tools/pkg/debian/po/pt_BR.po
@@ -13,12 +13,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: twiki_20030201-5\n"
-"Report-Msgid-Bugs-To: twiki@packages.debian.org\n"
+"Project-Id-Version: foswiki_20030201-5\n"
+"Report-Msgid-Bugs-To: foswiki@packages.debian.org\n"
 "POT-Creation-Date: 2008-07-16 11:58+0200\n"
 "PO-Revision-Date: 2005-09-04A 13:45-0300\n"
 "Last-Translator: Antonio S. de A. Terceiro <asaterceiro@inf.ufrgs.br>\n"
-"Language-Team: TWikiBrasil <twikibr@listas.softwarelivre.org>\n"
+"Language-Team: FoswikiBrasil <foswikibr@listas.softwarelivre.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -27,24 +27,24 @@ msgstr ""
 #. Description
 #: ../templates:1001
 #, fuzzy
-#| msgid "Top-level URL of the server TWiki runs under:"
-msgid "URL of the server TWiki runs under:"
-msgstr "URL inicial do servidor onde o TWiki roda:"
+#| msgid "Top-level URL of the server Foswiki runs under:"
+msgid "URL of the server Foswiki runs under:"
+msgstr "URL inicial do servidor onde o Foswiki roda:"
 
 #. Type: string
 #. Description
 #: ../templates:1001
 msgid ""
 "Please enter the web server URL (such as \"http://www.example.org/\"). "
-"Complete TWiki URLs will be constructed from this value plus the string "
-"\"twiki/\"."
+"Complete Foswiki URLs will be constructed from this value plus the string "
+"\"foswiki/\"."
 msgstr ""
 
 #. Type: string
 #. Description
 #: ../templates:2001
-msgid "Email address of the webmaster for this TWiki:"
-msgstr "Endereço de e-mail to webmaster desse TWiki:"
+msgid "Email address of the webmaster for this Foswiki:"
+msgstr "Endereço de e-mail to webmaster desse Foswiki:"
 
 #. Type: string
 #. Description
@@ -72,7 +72,7 @@ msgstr "Instalar conjunto de tópicos wiki inicial na primeira instalação?"
 #. Description
 #: ../templates:3001
 msgid ""
-"TWiki includes a complete \"starter kit\" which includes user registration "
+"Foswiki includes a complete \"starter kit\" which includes user registration "
 "pages, documentation, and tutorials."
 msgstr ""
 
@@ -80,7 +80,7 @@ msgstr ""
 #. Description
 #: ../templates:3001
 msgid ""
-"Accept this option unless you want to use an existing TWiki data set (for "
+"Accept this option unless you want to use an existing Foswiki data set (for "
 "instance, one left over from a previous installation)."
 msgstr ""
 
@@ -89,27 +89,27 @@ msgstr ""
 #: ../templates:3001
 #, fuzzy
 #| msgid ""
-#| "TWiki includes a complete \"starter kit\" which includes user "
+#| "Foswiki includes a complete \"starter kit\" which includes user "
 #| "registration pages, documentation, and tutorials.  Only decline if you're "
-#| "re-installing TWiki after deleting the package and want to keep the old "
-#| "data, or if you've got a TWiki data set from your own manual install.  If "
+#| "re-installing Foswiki after deleting the package and want to keep the old "
+#| "data, or if you've got a Foswiki data set from your own manual install.  If "
 #| "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#| "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#| "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#| "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#| "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #| "your topics with the new version."
 msgid ""
 "If data/Main/WebHome.txt is present, the starter kit will not be unpacked. "
-"The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-"(and twiki-pub.tar.gz) if you want to install it manually or compare the "
+"The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+"(and foswiki-pub.tar.gz) if you want to install it manually or compare the "
 "topics with the new version."
 msgstr ""
-"O TWiki inclui um \"kit inicial\" completo que inclui páginas de registro de "
+"O Foswiki inclui um \"kit inicial\" completo que inclui páginas de registro de "
 "usuários, documentação e tutoriais. Só decline se você estiver reinstalando "
-"twiki depois de remover o pacote e quiser manter os dados antigos, ou se "
+"foswiki depois de remover o pacote e quiser manter os dados antigos, ou se "
 "você tiver seu próprio conjunto de dados de uma instalação manual anterior. "
 "Se data/Main/WebHome.txt existir, o kit inicial não vai ser extraído. Os "
-"arquivos do kit inicial podem ser encontrados em /usr/share/twiki/twiki-data."
-"tar.gz (e twiki-pub.tar.gz), se você quiser instalá-lo manualmente ou "
+"arquivos do kit inicial podem ser encontrados em /usr/share/foswiki/foswiki-data."
+"tar.gz (e foswiki-pub.tar.gz), se você quiser instalá-lo manualmente ou "
 "comparar seus tópicos com a nova versão."
 
 #. Type: note
@@ -140,7 +140,7 @@ msgstr ""
 #: ../templates:5001
 msgid ""
 "Please enter the username of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 
 #. Type: password
@@ -155,7 +155,7 @@ msgstr ""
 #: ../templates:6001
 msgid ""
 "Please enter the password of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 
 #. Type: password
@@ -183,18 +183,18 @@ msgid ""
 "The passwords you entered didn't match. You will have to enter them again."
 msgstr ""
 
-#~ msgid "Top-level URL of the server TWiki runs under:"
-#~ msgstr "URL inicial do servidor onde o TWiki roda:"
+#~ msgid "Top-level URL of the server Foswiki runs under:"
+#~ msgstr "URL inicial do servidor onde o Foswiki roda:"
 
 #~ msgid ""
 #~ "For a normal install, this should be a URL for your web server's full "
 #~ "name, which is used to construct URLs on some pages.  The install will "
-#~ "serve up the data by adding \"twiki\" to the end of this setting; it is "
+#~ "serve up the data by adding \"foswiki\" to the end of this setting; it is "
 #~ "also needed for certain redirections."
 #~ msgstr ""
 #~ "Para uma instalação normal, essa deve deve a URL pro nome completo do seu "
 #~ "servidor, que é usada para construir URL's am alguma páginas. A "
-#~ "instalação vai fornecer essa informação adicionando \"twiki\" ao final "
+#~ "instalação vai fornecer essa informação adicionando \"foswiki\" ao final "
 #~ "desse valor; é necessário também pra alguns redirecionamentos."
 
 #~ msgid ""
@@ -208,20 +208,20 @@ msgstr ""
 #~ msgstr "Instalar conjunto de tópicos wiki inicial na primeira instalação?"
 
 #~ msgid ""
-#~ "TWiki includes a complete \"starter kit\" which includes user "
+#~ "Foswiki includes a complete \"starter kit\" which includes user "
 #~ "registration pages, documentation, and tutorials.  Only decline if you're "
-#~ "re-installing TWiki after deleting the package and want to keep the old "
-#~ "data, or if you've got a TWiki data set from your own manual install.  If "
+#~ "re-installing Foswiki after deleting the package and want to keep the old "
+#~ "data, or if you've got a Foswiki data set from your own manual install.  If "
 #~ "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#~ "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#~ "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#~ "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#~ "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #~ "your topics with the new version."
 #~ msgstr ""
-#~ "O TWiki inclui um \"kit inicial\" completo que inclui páginas de registro "
+#~ "O Foswiki inclui um \"kit inicial\" completo que inclui páginas de registro "
 #~ "de usuários, documentação e tutoriais. Só decline se você estiver "
-#~ "reinstalando twiki depois de remover o pacote e quiser manter os dados "
+#~ "reinstalando foswiki depois de remover o pacote e quiser manter os dados "
 #~ "antigos, ou se você tiver seu próprio conjunto de dados de uma instalação "
 #~ "manual anterior. Se data/Main/WebHome.txt existir, o kit inicial não vai "
 #~ "ser extraído. Os arquivos do kit inicial podem ser encontrados em /usr/"
-#~ "share/twiki/twiki-data.tar.gz (e twiki-pub.tar.gz), se você quiser "
+#~ "share/foswiki/foswiki-data.tar.gz (e foswiki-pub.tar.gz), se você quiser "
 #~ "instalá-lo manualmente ou comparar seus tópicos com a nova versão."
