--- a/core/tools/pkg/debian/po/ro.po
+++ b/core/tools/pkg/debian/po/ro.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
-"Report-Msgid-Bugs-To: twiki@packages.debian.org\n"
+"Report-Msgid-Bugs-To: foswiki@packages.debian.org\n"
 "POT-Creation-Date: 2008-07-16 11:58+0200\n"
 "PO-Revision-Date: 2008-06-28 21:09+0300\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
@@ -23,26 +23,26 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../templates:1001
-msgid "URL of the server TWiki runs under:"
-msgstr "URL-ul pentru serverul pe care rulează TWiki:"
+msgid "URL of the server Foswiki runs under:"
+msgstr "URL-ul pentru serverul pe care rulează Foswiki:"
 
 #. Type: string
 #. Description
 #: ../templates:1001
 msgid ""
 "Please enter the web server URL (such as \"http://www.example.org/\"). "
-"Complete TWiki URLs will be constructed from this value plus the string "
-"\"twiki/\"."
+"Complete Foswiki URLs will be constructed from this value plus the string "
+"\"foswiki/\"."
 msgstr ""
 "Introduceți URL-ul serverului web (de exemplu „http://www.example.org/”). "
-"URL-urile complete ale lui TWiki vor fi construite din acestă valoare plus "
-"șirul „twiki”."
+"URL-urile complete ale lui Foswiki vor fi construite din acestă valoare plus "
+"șirul „foswiki”."
 
 #. Type: string
 #. Description
 #: ../templates:2001
-msgid "Email address of the webmaster for this TWiki:"
-msgstr "Adresa de poștă electronică a administratorului acestui TWiki:"
+msgid "Email address of the webmaster for this Foswiki:"
+msgstr "Adresa de poștă electronică a administratorului acestui Foswiki:"
 
 #. Type: string
 #. Description
@@ -65,34 +65,34 @@ msgstr "Se instalează setul implicit pentru wiki?"
 #. Description
 #: ../templates:3001
 msgid ""
-"TWiki includes a complete \"starter kit\" which includes user registration "
+"Foswiki includes a complete \"starter kit\" which includes user registration "
 "pages, documentation, and tutorials."
 msgstr ""
-"TWiki include un set complet „de început” care include paginile de "
+"Foswiki include un set complet „de început” care include paginile de "
 "înregistrare pentru utilizatori, documentație și tutoriale."
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
 msgid ""
-"Accept this option unless you want to use an existing TWiki data set (for "
+"Accept this option unless you want to use an existing Foswiki data set (for "
 "instance, one left over from a previous installation)."
 msgstr ""
 "Acceptați această opțiune doar dacă nu intenționați să folosiți un set de "
-"date TWiki existent (de exemplu, unul rămas de la o instalare anterioară)."
+"date Foswiki existent (de exemplu, unul rămas de la o instalare anterioară)."
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
 msgid ""
 "If data/Main/WebHome.txt is present, the starter kit will not be unpacked. "
-"The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-"(and twiki-pub.tar.gz) if you want to install it manually or compare the "
+"The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+"(and foswiki-pub.tar.gz) if you want to install it manually or compare the "
 "topics with the new version."
 msgstr ""
 "Dacă data/Main/WebHome.txt este prezent, „setul implicit de pornire” nu va "
 "fi despachetat. Fișierele parte din setul implicit pot fi găsite în /usr/"
-"share/twiki/twiki-data.tar.gz (și twiki-pub.tar.gz), dacă doriți să le "
+"share/foswiki/foswiki-data.tar.gz (și foswiki-pub.tar.gz), dacă doriți să le "
 "instalați manual sau să comparați ce aveți dumneavoastră cu ce este în "
 "versiunile noi."
 
@@ -126,10 +126,10 @@ msgstr ""
 #: ../templates:5001
 msgid ""
 "Please enter the username of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Introduceți numele utilizatorului Apache căruia îi va fi permis să ruleze "
-"scriptul de configurare de la http://localhost/cgi-bin/twiki/configure."
+"scriptul de configurare de la http://localhost/cgi-bin/foswiki/configure."
 
 #. Type: password
 #. Description
@@ -143,10 +143,10 @@ msgstr "Parola pentru '${configuser}':"
 #: ../templates:6001
 msgid ""
 "Please enter the password of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 "Introduceți parola utilizatorului apache căruia îi va fi permis să ruleze "
-"scriptul de configurare de la http://localhost/cgi-bin/twiki/configure."
+"scriptul de configurare de la http://localhost/cgi-bin/foswiki/configure."
 
 #. Type: password
 #. Description
@@ -174,21 +174,21 @@ msgid ""
 msgstr ""
 "Parolele introduse nu s-au potrivit. Va trebui să le introduceți din nou."
 
-#~ msgid "Top-level URL of the server TWiki runs under:"
+#~ msgid "Top-level URL of the server Foswiki runs under:"
 #~ msgstr ""
 #~ "URL-ul pentru nivelul cel mai de sus pentru serverul pe care rulează "
-#~ "TWiki:"
+#~ "Foswiki:"
 
 #~ msgid ""
 #~ "For a normal install, this should be a URL for your web server's full "
 #~ "name, which is used to construct URLs on some pages.  The install will "
-#~ "serve up the data by adding \"twiki\" to the end of this setting; it is "
+#~ "serve up the data by adding \"foswiki\" to the end of this setting; it is "
 #~ "also needed for certain redirections."
 #~ msgstr ""
 #~ "Pentru o instalare normală, acesta ar trebui să fie URL-ul complet al "
 #~ "serverului care va fi folosit pentru a crea URL-uri pe unele pagini. "
 #~ "Sistemul va furniza datele de la adresa precizată la care se va adăuga la "
-#~ "sfârșit șirul de caractere „twiki”; acest lucru este necesar și pentru "
+#~ "sfârșit șirul de caractere „foswiki”; acest lucru este necesar și pentru "
 #~ "anumite redirectări."
 
 #~ msgid ""
@@ -202,22 +202,22 @@ msgstr ""
 #~ msgstr "Se instalează și setul implicit pentru wiki la instalarea inițială?"
 
 #~ msgid ""
-#~ "TWiki includes a complete \"starter kit\" which includes user "
+#~ "Foswiki includes a complete \"starter kit\" which includes user "
 #~ "registration pages, documentation, and tutorials.  Only decline if you're "
-#~ "re-installing TWiki after deleting the package and want to keep the old "
-#~ "data, or if you've got a TWiki data set from your own manual install.  If "
+#~ "re-installing Foswiki after deleting the package and want to keep the old "
+#~ "data, or if you've got a Foswiki data set from your own manual install.  If "
 #~ "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#~ "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#~ "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#~ "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#~ "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #~ "your topics with the new version."
 #~ msgstr ""
-#~ "TWiki include un „set implicit de pornire” complet care include paginile "
+#~ "Foswiki include un „set implicit de pornire” complet care include paginile "
 #~ "pentru înregistrarea utilizatorilor, documentație și ghiduri. Refuzați "
-#~ "doar dacă reinstalați TWiki după ștergerea pachetului și doriți să "
-#~ "păstrați datele vechi, sau dacă aveți un set de date pentru TWiki "
+#~ "doar dacă reinstalați Foswiki după ștergerea pachetului și doriți să "
+#~ "păstrați datele vechi, sau dacă aveți un set de date pentru Foswiki "
 #~ "rezultat dintr-o instalare proprie făcută manual. Dacă data/Main/WebHome."
 #~ "txt este prezent, „setul implicit de pornire” nu va fi despachetat. "
-#~ "Fișierele parte din setul implicit pot fi găsite în /usr/share/twiki/"
-#~ "twiki-data.tar.gz (și twiki-pub.tar.gz), dacă doriți să le instalați "
+#~ "Fișierele parte din setul implicit pot fi găsite în /usr/share/foswiki/"
+#~ "foswiki-data.tar.gz (și foswiki-pub.tar.gz), dacă doriți să le instalați "
 #~ "manual sau să comparați ce aveți dumneavoastră cu ce este în versiunile "
 #~ "noi."
