--- a/core/tools/pkg/debian/po/sv.po
+++ b/core/tools/pkg/debian/po/sv.po
@@ -13,8 +13,8 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: twiki 20040902-3\n"
-"Report-Msgid-Bugs-To: twiki@packages.debian.org\n"
+"Project-Id-Version: foswiki 20040902-3\n"
+"Report-Msgid-Bugs-To: foswiki@packages.debian.org\n"
 "POT-Creation-Date: 2008-07-16 11:58+0200\n"
 "PO-Revision-Date: 2007-02-17 10:54+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
@@ -27,24 +27,24 @@ msgstr ""
 #. Description
 #: ../templates:1001
 #, fuzzy
-#| msgid "Top-level URL of the server TWiki runs under:"
-msgid "URL of the server TWiki runs under:"
-msgstr "Topp-nivå-URLen för servern som TWiki kör på:"
+#| msgid "Top-level URL of the server Foswiki runs under:"
+msgid "URL of the server Foswiki runs under:"
+msgstr "Topp-nivå-URLen för servern som Foswiki kör på:"
 
 #. Type: string
 #. Description
 #: ../templates:1001
 msgid ""
 "Please enter the web server URL (such as \"http://www.example.org/\"). "
-"Complete TWiki URLs will be constructed from this value plus the string "
-"\"twiki/\"."
+"Complete Foswiki URLs will be constructed from this value plus the string "
+"\"foswiki/\"."
 msgstr ""
 
 #. Type: string
 #. Description
 #: ../templates:2001
-msgid "Email address of the webmaster for this TWiki:"
-msgstr "E-postadress för webbmastern för denna TWiki:"
+msgid "Email address of the webmaster for this Foswiki:"
+msgstr "E-postadress för webbmastern för denna Foswiki:"
 
 #. Type: string
 #. Description
@@ -72,7 +72,7 @@ msgstr "Installera standarduppsättning av wikiämnen vid initial installation?"
 #. Description
 #: ../templates:3001
 msgid ""
-"TWiki includes a complete \"starter kit\" which includes user registration "
+"Foswiki includes a complete \"starter kit\" which includes user registration "
 "pages, documentation, and tutorials."
 msgstr ""
 
@@ -80,7 +80,7 @@ msgstr ""
 #. Description
 #: ../templates:3001
 msgid ""
-"Accept this option unless you want to use an existing TWiki data set (for "
+"Accept this option unless you want to use an existing Foswiki data set (for "
 "instance, one left over from a previous installation)."
 msgstr ""
 
@@ -89,27 +89,27 @@ msgstr ""
 #: ../templates:3001
 #, fuzzy
 #| msgid ""
-#| "TWiki includes a complete \"starter kit\" which includes user "
+#| "Foswiki includes a complete \"starter kit\" which includes user "
 #| "registration pages, documentation, and tutorials.  Only decline if you're "
-#| "re-installing TWiki after deleting the package and want to keep the old "
-#| "data, or if you've got a TWiki data set from your own manual install.  If "
+#| "re-installing Foswiki after deleting the package and want to keep the old "
+#| "data, or if you've got a Foswiki data set from your own manual install.  If "
 #| "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#| "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#| "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#| "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#| "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #| "your topics with the new version."
 msgid ""
 "If data/Main/WebHome.txt is present, the starter kit will not be unpacked. "
-"The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-"(and twiki-pub.tar.gz) if you want to install it manually or compare the "
+"The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+"(and foswiki-pub.tar.gz) if you want to install it manually or compare the "
 "topics with the new version."
 msgstr ""
-"TWiki inkluderar ett komplett \"starter kit\" som inkluderar sidor för "
+"Foswiki inkluderar ett komplett \"starter kit\" som inkluderar sidor för "
 "användarregistrering, dokumentation och handledningar.  Vägra endast om du "
-"installerar om twiki efter att paketet har tagits bort och du vill behålla "
-"gammalt data, eller om du har en uppsättning twiki-data från din egna "
+"installerar om foswiki efter att paketet har tagits bort och du vill behålla "
+"gammalt data, eller om du har en uppsättning foswiki-data från din egna "
 "manuella installation. Om data/Main/WebHome.txt finns kommer startkitet inte "
-"att packas upp. Startkitets filer kan hittas i /usr/share/twiki/twiki-data."
-"tar.gz  (och twiki-pub.tar.gz), om du vill installera det manuellt eller "
+"att packas upp. Startkitets filer kan hittas i /usr/share/foswiki/foswiki-data."
+"tar.gz  (och foswiki-pub.tar.gz), om du vill installera det manuellt eller "
 "jämföra dina ämnen med den nya versionen."
 
 #. Type: note
@@ -140,7 +140,7 @@ msgstr ""
 #: ../templates:5001
 msgid ""
 "Please enter the username of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 
 #. Type: password
@@ -155,7 +155,7 @@ msgstr ""
 #: ../templates:6001
 msgid ""
 "Please enter the password of the apache user who will be allowed to run the "
-"configure script at http://localhost/cgi-bin/twiki/configure."
+"configure script at http://localhost/cgi-bin/foswiki/configure."
 msgstr ""
 
 #. Type: password
@@ -183,18 +183,18 @@ msgid ""
 "The passwords you entered didn't match. You will have to enter them again."
 msgstr ""
 
-#~ msgid "Top-level URL of the server TWiki runs under:"
-#~ msgstr "Topp-nivå-URLen för servern som TWiki kör på:"
+#~ msgid "Top-level URL of the server Foswiki runs under:"
+#~ msgstr "Topp-nivå-URLen för servern som Foswiki kör på:"
 
 #~ msgid ""
 #~ "For a normal install, this should be a URL for your web server's full "
 #~ "name, which is used to construct URLs on some pages.  The install will "
-#~ "serve up the data by adding \"twiki\" to the end of this setting; it is "
+#~ "serve up the data by adding \"foswiki\" to the end of this setting; it is "
 #~ "also needed for certain redirections."
 #~ msgstr ""
 #~ "För en normal installation bör detta vara en URL för din webbservers "
 #~ "fullständiga namn som används för att konstruera URLer för vissa sidor.  "
-#~ "Installationen kommer att servera data genom att lägga till \"twiki\" på "
+#~ "Installationen kommer att servera data genom att lägga till \"foswiki\" på "
 #~ "slutet av denna inställning; den behövs också för vissa omdirigeringar."
 
 #~ msgid ""
@@ -209,22 +209,22 @@ msgstr ""
 #~ "Installera standarduppsättning av wikiämnen vid initial installation?"
 
 #~ msgid ""
-#~ "TWiki includes a complete \"starter kit\" which includes user "
+#~ "Foswiki includes a complete \"starter kit\" which includes user "
 #~ "registration pages, documentation, and tutorials.  Only decline if you're "
-#~ "re-installing TWiki after deleting the package and want to keep the old "
-#~ "data, or if you've got a TWiki data set from your own manual install.  If "
+#~ "re-installing Foswiki after deleting the package and want to keep the old "
+#~ "data, or if you've got a Foswiki data set from your own manual install.  If "
 #~ "data/Main/WebHome.txt is present, the starter kit will not be unpacked.  "
-#~ "The starter kit files can be found in /usr/share/twiki/twiki-data.tar.gz "
-#~ "(and twiki-pub.tar.gz), if you want to install it manually or compare "
+#~ "The starter kit files can be found in /usr/share/foswiki/foswiki-data.tar.gz "
+#~ "(and foswiki-pub.tar.gz), if you want to install it manually or compare "
 #~ "your topics with the new version."
 #~ msgstr ""
-#~ "TWiki inkluderar ett komplett \"starter kit\" som inkluderar sidor för "
+#~ "Foswiki inkluderar ett komplett \"starter kit\" som inkluderar sidor för "
 #~ "användarregistrering, dokumentation och handledningar.  Vägra endast om "
-#~ "du installerar om twiki efter att paketet har tagits bort och du vill "
-#~ "behålla gammalt data, eller om du har en uppsättning twiki-data från din "
+#~ "du installerar om foswiki efter att paketet har tagits bort och du vill "
+#~ "behålla gammalt data, eller om du har en uppsättning foswiki-data från din "
 #~ "egna manuella installation. Om data/Main/WebHome.txt finns kommer "
 #~ "startkitet inte att packas upp. Startkitets filer kan hittas i /usr/share/"
-#~ "twiki/twiki-data.tar.gz  (och twiki-pub.tar.gz), om du vill installera "
+#~ "foswiki/foswiki-data.tar.gz  (och foswiki-pub.tar.gz), om du vill installera "
 #~ "det manuellt eller jämföra dina ämnen med den nya versionen."
 
 #~ msgid "http://localhost/"
@@ -234,21 +234,21 @@ msgstr ""
 #~ msgstr "webmaster@localhost"
 
 #~ msgid ""
-#~ "The default debian installation of the TWiki is configured to create new "
+#~ "The default debian installation of the Foswiki is configured to create new "
 #~ "users automatically when a user Registers. This is not as secure as the "
-#~ "default TWiki but is more useful for trying TWiki out. To change it so "
-#~ "the users are created manually by the administrator use TWiki RenameTopic "
-#~ "to rename the TWikiRegistration to TWikiRegistrationPub, and "
-#~ "TWikiRegistrationDefault to TWikiRegistration. IMPORTANT: After you have "
+#~ "default Foswiki but is more useful for trying Foswiki out. To change it so "
+#~ "the users are created manually by the administrator use Foswiki RenameTopic "
+#~ "to rename the FoswikiRegistration to FoswikiRegistrationPub, and "
+#~ "FoswikiRegistrationDefault to FoswikiRegistration. IMPORTANT: After you have "
 #~ "created yourself a user, edit the Main.AdminGroup to restrict Admin "
 #~ "privileges"
 #~ msgstr ""
-#~ "Standardinstallation i Debian av TWiki är konfigurerad att skapa nya "
+#~ "Standardinstallation i Debian av Foswiki är konfigurerad att skapa nya "
 #~ "användare automatiskt när en användare registrerar sig. Detta är inte så "
-#~ "säkert som standarden i TWiki men är mer användbar för att prova på "
-#~ "TWiki. För att ändra det så att användare som skapas manuellt av "
-#~ "administratören använd TWiki RenameTopic för att byta namn på "
-#~ "TWikiRegistration till TWikiRegistrationPub och TWikiRegistrationDefault "
-#~ "till TWikiRegistration. VIKTIGT: Efter att du har skapat din egna "
+#~ "säkert som standarden i Foswiki men är mer användbar för att prova på "
+#~ "Foswiki. För att ändra det så att användare som skapas manuellt av "
+#~ "administratören använd Foswiki RenameTopic för att byta namn på "
+#~ "FoswikiRegistration till FoswikiRegistrationPub och FoswikiRegistrationDefault "
+#~ "till FoswikiRegistration. VIKTIGT: Efter att du har skapat din egna "
 #~ "användare, redigera Main.AdminGroup för att begränsa "
 #~ "administrationsrättigheterna."
